--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "typescript": "^4.1.5"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "npm run tsc && node dist/index.js",
     "tsc": "rm -rf dist && tsc",
     "tscw": "tsc --watch"
   },
   "devDependencies": {
-    "@tsconfig/recommended": "^1.0.1"
+    "@tsconfig/recommended": "^1.0.1",
+    "@types/puppeteer": "^5.4.3"
   }
 }
