--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
   "exclude": ["node_modules", "**/*.spec.ts", "dist"],
   "compilerOptions": {
     "allowJs": true,
-    "outDir": "dist"
+    "outDir": "dist",
   },
 }
