--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1",
-    "posthtml": "^0.15.1",
+    "axios": "^1.2.2",
+    "posthtml": "^0.16.6",
     "posthtml-match-helper": "^1.0.1",
-    "puppeteer": "^7.1.0",
+    "puppeteer": "19.5.2",
     "typescript": "^4.1.5"
   },
   "scripts": {
